--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
                 <ul>
                     <li><a class='button' href='commands.html'><span>Commands</span></a></li>
                     <li><a class='button' href='loja.html'><span>Shop</span></a></li>
-                    <li><a class='button' href='https://discord.gg/xVbFaP6hbx'><span>Support</span></a></li>
-                    <li><a class='button' href='https://discord.com/api/oauth2/authorize?client_id=835624624137699368&permissions=3959946305&scope=bot
+                    <li><a class='button' href='https://discord.gg/8spZSzQENg'><span>Support</span></a></li>
+                    <li><a class='button' href='https://discord.com/api/oauth2/authorize?client_id=830265742795866162&permissions=8&scope=bot
 '><span>Invite Bot</span></a></li>
-                    <li><a class='button' href='dark.html'><span>DarkNoah</span></a></li>
+                  
 
                 </ul>
             </nav>
@@ -63,9 +63,9 @@
                 <h1>Skull Discord Bot Games !</h1>
                 <p>Learn more about Bot!</p>
                 <div class='buttons flex'>
-                    <a class='button btn btn-blurple' href='https://discord.gg/xVbFaP6hbx' ><span><i class="fab fa-discord fa-2x"></i>Support</span></a>
-                    <a class='button btn btn-blurple' href='https://discord.com/api/oauth2/authorize?client_id=835624624137699368&permissions=3959946305&scope=bot' ><span><i class="fab fa-discord fa-2x"></i>Invite</span></a>
-                    <a class='button btn' href='https://www.youtube.com/watch?v=EIf67Y3KFPc'><span>YouTube</span></a>
+                    <a class='button btn btn-blurple' href='https://discord.gg/8spZSzQENg' ><span><i class="fab fa-discord fa-2x"></i>Support</span></a>
+                    <a class='button btn btn-blurple' href='https://discord.com/api/oauth2/authorize?client_id=830265742795866162&permissions=8&scope=bot' ><span><i class="fab fa-discord fa-2x"></i>Invite</span></a>
+                    <a class='button btn' href=''><span>YouTube</span></a>
                     <a class='button btn' href='https://skull-bots.glitch.me/commands.html'><span>Commands</span></a>
                 </div>
             </div>
@@ -81,7 +81,7 @@
                 
                 </p>
             </div>
-            <img src='https://media.discordapp.net/attachments/839202586413236224/869931451292975204/Screenshot_-_Discord-Beta.jpg' alt='Entretenimento'>
+            <img src='https://media.discordapp.net/attachments/898502148508229672/949399725830967306/bandicam_2022-03-04_23-10-20-241.png' alt='Entretenimento'>
         </div>
     </div>
 
@@ -93,7 +93,7 @@
 
                 </p>
             </div>
-          <img src='  https://media.discordapp.net/attachments/839202586413236224/869932090995654666/Screenshot_-_Discord-Beta.jpg  ' alt='Youtube'>
+          <img src='  https://media.discordapp.net/attachments/898502148508229672/949399317054124112/bandicam_2022-03-04_23-12-59-469.png  ' alt='Youtube'>
         </div>
     </div>
 
@@ -101,27 +101,27 @@
         <div class='container grid'>
             <div>
                 <h3>Developer</h3>
-                <p>Developer Bot  <b>ᎪᎶs | Dark Noah#1910</b>
+                <p>Developer Bot  <b>Hardi#0001</b>
                 </p>
             </div>
-            <img src='https://media.discordapp.net/attachments/839202586413236224/869931188880568330/Screenshot_-_Discord-Beta.jpg?width=598&height=293' alt='Desrespeito para com os outros membros'>
+            <img src='https://media.discordapp.net/attachments/898502148508229672/949399341083279461/Skull_Bot.png' alt='Desrespeito para com os outros membros'>
         </div>
     </div>
-<iframe width="400" height="409" src="https://www.youtube.com/embed/EIf67Y3KFPc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="400" height="409" src="" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
     <!-- Footer -->
     <div class='footer'>
         <div class='container full grid'>
             <div class='branding'>
-                <h2>Developer : ᎪᎶs | Dark Noah#1910</h2>
-                <p>Copyright &copy; 2021 Skull </p>
+                <h2>Developer : Hardi#0001</h2>
+                <p>Copyright &copy; 2021 Skull Bot </p>
             </div>
             <div class='flex'>
                 <div class='footernav'>
                     <ul>
                         <li><a class="button" href="/"><span>Refrsh</span></a></li>
                         <li><a class="button" href='commands.html'><span>Commands</span></a></li>
-                        <li><a class="button" href='https://discord.gg/xVbFaP6hbx'><span>Server Support</span></a></li>
+                        <li><a class="button" href='https://discord.gg/8spZSzQENg'><span>Server Support</span></a></li>
                     </ul>
                 </div>
             </div>
@@ -131,6 +131,4 @@
 
 </html>
 
-<a href="https://top.gg/bot/835624624137699368">
-  <img src="https://top.gg/api/widget/835624624137699368.svg" alt="Skull" />
-  </a>
+  
