--- a/commands.html
+++ b/commands.html
@@ -42,7 +42,7 @@
             <nav>
                 <ul>
                     <li><a class='button currentPage' href='/'><span>Home</span></a></li>
-                    <li><a class='button' href='https://discord.gg/xVbFaP6hbx'><span>Support</span></a></li>
+                    <li><a class='button' href='https://discord.gg/8spZSzQENg'><span>Support</span></a></li>
                 </ul>
             </nav>
         </div>
@@ -154,14 +154,8 @@
                     <label for='music' class='accordion_label'><i class="fas fa-compact-disc"></i>YouTube</label>
                     <div class='content accordion'>
                         <div class='card'>
-                            <input type='checkbox' id='now-playing' class='accordion_input'>
-                            <label for='now-playing' class='accordion_label'>Youtube</label>
-                            <div class='content'>
-                                <p></p>
-                                <div class='flex usage'>
-                                    <h4>YouTube - Dark Noah: </h4>
-                                    <pre><code>https://www.youtube.com/watch?v=EIf67Y3KFPc </code></pre>
-                                </div>
+                             </code></pre>
+                                </div
                             </div>
                         </div>
                     </div>
@@ -250,7 +244,7 @@
                                 </div>
                                 <div class='flex usage'>
                                     <h4>Exemplo: </h4>
-                                    <pre><code>Skick ᎪᎶs | Dark Noah#1910</code></pre>
+                                    <pre><code>Skick Hardi#0001</code></pre>
                                 </div>
                                 <div class='flex usage'>
                                     <h4>Required permissions: </h4>
@@ -304,7 +298,7 @@
                                 </div>
                                 <div class='flex usage'>
                                     <h4>Exemplo: </h4>
-                                    <pre><code>Smute ᎪᎶs | Dark Noah#1910</code></pre>
+                                    <pre><code>Smute Hardi#0001</code></pre>
                                 </div>
                                 <div class='flex usage'>
                                     <h4>Required permissions: </h4>
@@ -409,7 +403,7 @@
                                 </div>
                                 <div class='flex usage'>
                                     <h4>Exemplo: </h4>
-                                    <pre><code>rep @PILEQUE#6252</code></pre>
+                                    <pre><code>rep @Hardi#0001</code></pre>
                                 </div>
                             </div>
                         </div>
@@ -456,7 +450,7 @@
     <div class='footer'>
         <div class='container full grid'>
             <div class='branding'>
-                <h4>Developer : ᎪᎶs | Dark Noah#1910</h4>
+                <h4>Developer : Hardi#0001</h4>
                 <p>Copyright &copy; 2021 Skull</p>
             </div>
             <div class='flex'>
@@ -464,7 +458,7 @@
                     <ul>
                         <li><a class='button' href='/'><span>Home</span></a></li>
                         <li><a class='button' href='commands.html'><span>Comandos</span></a></li>
-                        <li><a class='button' href='https://discord.gg/xVbFaP6hbx'><span>Servidor</span></a></li>
+                        <li><a class='button' href='https://discord.gg/8spZSzQENg'><span>Servidor</span></a></li>
                     </ul>
                 </div>
             </div>
